--- a/package.json
+++ b/package.json
@@ -14,9 +14,17 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@apollo/client": "^3.2.5",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "@typescript-eslint/parser": "^4.6.0",
     "gatsby": "^2.24.85",
+    "gatsby-plugin-material-ui": "^2.1.10",
+    "gatsby-plugin-typescript": "^2.4.25",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "typescript": "^4.0.5"
   },
   "devDependencies": {
     "prettier": "2.1.2"
